[tool.poetry]
name = "pygraz202110web"
version = "0.1.0"
description = "python in browser demo"
authors = ["Dorian Santner"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"
Transcrypt = "^3.9.0"
streamlit = "^1.2.0"
coinpaprika = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
